# mobile-sdk

./: .gitignore  .gitmodules  .travis.yml  BUILDING.md  CONTRIBUTING.md  LICENSE  NEWS.md  README.md  known issues.md
.github/: Dockerfile
.github/workflows/: android.yml  build.yml  ios.yml
assets/: default-nmlmodel.nml
doc/: API.md  add_objects.md  advanced.md  android_vs_ios.md  api_reference.md  basic_features.md  carto.md  clusters.md  code_sample_block.js  common_tasks.md  custom_offline_data.md  data_sources.md  datasources.md  developer_guide.md  downloads.md  geocoding.md  getting_started.md  ground_overlays.md  listener-events.md  listener_events.md  listeners.md  loading_data.md  map_styles.md  mbtiles.md  mobile_apps_and_api_keys.md  mobile_features.md  mobile_platform_implementation.md  offline-maps.md  offline_map_service.md  offline_maps.md  offline_packages.md  packagemanager.md  packagemanger.md  proextensions.md  raster_sources.md  routing.md  sampleapps.md  sdk_with_carto.md  show_labels.md  skd_downloads.md  (+2 more)
docs/examples/: 01-example.md
docs/guides/: 01-getting-started.md  02-SDK-and-CARTO-tools.md  02-api-keys.md  02-data-sources.md  02-map-view.md  03-layers-and-data-sources.md  03-loading-map-data.md  03-vector-elements.md  04-SDK-features.md  04-map-listeners.md  04-vector-objects-on-map.md  05-mobile-routing.md  05-offline-maps.md  05-package-manager.md  06-mobile-geocoding.md  06-package-manager.md  07-mobile-geocoding.md  07-mobile-routing.md  07-package-manager.md  08-custom-offline-data.md  08-mobile-routing.md  09-CARTO-integrations.md  09-custom-offline-data.md  09-pro-extensions.md  10-API-keys.md  10-clustering.md  11-custom-offline-data.md  11-ground-overlays.md  12-ground-overlays.md  12-performance-enhancements.md  12-pro-extensions.md  13-API-keys.md  13-performance-enhancements.md  14-API-keys.md  API-keys.md
docs/reference/: 01-intro.md  02-contribute.md
docs/support/: 01-support-options.md  02-contribute.md
ios/objc/: Carto.h  CartoMobileSDK.h
ios/stdlib/: optional  variant
libs-carto/cartocss/: CMakeLists.txt
libs-carto/geocoding/: CMakeLists.txt
libs-carto/geocoding/src/geocoding/: Address.cpp  Address.h  AddressInterpolator.cpp  AddressInterpolator.h  EncodingStream.h  Feature.h  FeatureReader.h  Geocoder.cpp  Geocoder.h  Geometry.h  GeometryDecoder.h  GeometryReader.h  ProjUtils.cpp  ProjUtils.h  QuadIndex.h  RevGeocoder.cpp  RevGeocoder.h  StringMatcher.h  StringUtils.cpp  StringUtils.h  TaggedTokenList.h  TokenList.h
libs-carto/mapnikvt/: CMakeLists.txt
libs-carto/mapnikvt/src/mapnikvt/: BuildingSymbolizer.cpp  BuildingSymbolizer.h  Expression.cpp  Expression.h  ExpressionBinder.h  ExpressionContext.cpp  ExpressionContext.h  ExpressionGenerator.h  ExpressionOperator.h  ExpressionParser.h  Feature.h  FeatureCollection.h  FeatureData.h  FeatureDecoder.h  Filter.h  FontSet.h  FunctionBuilder.h  Geometry.cpp  Geometry.h  GeometrySymbolizer.cpp  GeometrySymbolizer.h  LinePatternSymbolizer.cpp  LinePatternSymbolizer.h  LineSymbolizer.cpp  LineSymbolizer.h  Logger.h  MBVTFeatureDecoder.cpp  MBVTFeatureDecoder.h  MBVTTileReader.cpp  MBVTTileReader.h  Map.cpp  Map.h  MapGenerator.cpp  MapGenerator.h  MapParser.cpp  MapParser.h  MarkersSymbolizer.cpp  MarkersSymbolizer.h  NutiParameter.h  Parameter.h  (+40 more)
libs-carto/mapnikvt/src/mapnikvt/mbvtpackage/: MBVTPackage.pb.h  MBVTPackage.proto
libs-carto/nml/: CMakeLists.txt
libs-carto/nml/src/nml/: GLBase.h  GLMaterial.cpp  GLMaterial.h  GLMesh.cpp  GLMesh.h  GLMeshInstance.cpp  GLMeshInstance.h  GLModel.cpp  GLModel.h  GLResourceManager.cpp  GLResourceManager.h  GLShaderManager.cpp  GLShaderManager.h  GLSubmesh.cpp  GLSubmesh.h  GLTexture.cpp  GLTexture.h
libs-carto/nml/src/nml/nmlpackage/: NMLPackage.pb.h  NMLPackage.proto
libs/cartocss/: CMakeLists.txt
libs/cartocss/src/cartocss/: CartoCSSCompiler.cpp  CartoCSSCompiler.h  CartoCSSMapLoader.cpp  CartoCSSMapLoader.h  CartoCSSMapnikTranslator.cpp  CartoCSSMapnikTranslator.h  CartoCSSParser.cpp  CartoCSSParser.h  Predicate.h  StyleSheet.h  TorqueCartoCSSMapLoader.cpp  TorqueCartoCSSMapLoader.h  TorqueCartoCSSMapnikTranslator.cpp  TorqueCartoCSSMapnikTranslator.h
libs/mapnikvt/: CMakeLists.txt
libs/mapnikvt/src/mapnikvt/: BuildingSymbolizer.cpp  BuildingSymbolizer.h  CSSColorParser.cpp  CSSColorParser.h  ColorGenerator.h  ColorParser.h  Expression.cpp  Expression.h  ExpressionBinder.h  ExpressionContext.h  ExpressionGenerator.h  ExpressionOperator.h  ExpressionParser.h  FeatureCollection.h  FeatureData.h  FeatureDecoder.h  Filter.h  FontSet.h  GeneratorUtils.cpp  GeneratorUtils.h  GeometrySymbolizer.h  Layer.h  LinePatternSymbolizer.cpp  LinePatternSymbolizer.h  LineSymbolizer.cpp  LineSymbolizer.h  MBVTFeatureDecoder.cpp  MBVTFeatureDecoder.h  MBVTTileReader.cpp  MBVTTileReader.h  MapGenerator.cpp  MapParser.cpp  MarkersSymbolizer.cpp  MarkersSymbolizer.h  NutiParameter.h  Parameter.h  ParserUtils.cpp  ParserUtils.h  PointSymbolizer.cpp  PointSymbolizer.h  (+37 more)
libs/routing/: CMakeLists.txt
libs/routing/src/routing/: RouteFinder.cpp  RoutingGraph.cpp  RoutingObjects.h
libs/vt/: CMakeLists.txt
libs/vt/src/vt/: BitmapCanvas.cpp  BitmapManager.cpp  BitmapManager.h  Color.h  Font.h  FontManager.cpp  FontManager.h  GLShaderManager.cpp  GLShaderManager.h  GLTileRenderer.cpp  GLTileRenderer.h  GlyphMap.cpp  GlyphMap.h  StrokeMap.cpp  StrokeMap.h  Styles.h  TileGeometry.h  TileLabel.cpp  TileLabel.h  TileLabelCuller.cpp  TileLayer.h  TileLayerBuilder.cpp  TileLayerBuilder.h  TileLayerStyles.h  VertexArray.h  ViewState.h
scripts/: CMakeLists.txt  README.md  _formatcode.py  build-android.py  build-emscripten.py  build-ios.py  build-winphone.py  build-xamarin.py  generate-assets.sh  generate-doxygen.sh  generate-htmldoc.sh  generate-javadoc.sh  generate-jazzy.sh  stack-trace.sh  swigpp-csharp.py  swigpp-emscripten.py  swigpp-java.py  swigpp-objc.py
scripts/android/: CMakeLists.txt  build.gradle  version-script
scripts/android-aar/: build.gradle  pom.xml  publish.gradle  (+2 more)
scripts/android/src/main/: AndroidManifest.xml
(+1298 files in other folders)
